# TeskLang

./: .gitmodules  CMakeLists.txt  README.md
include/tesk/lexer/: lexer.h  token.h
include/tesk/parser/: expr.h
libs/: CMakeLists.txt
src/tesk/lexer/: lexer.c  token.c
src/tesk/parser/: expr.c  parser.c
tests/: CMakeLists.txt  test_lexer.c
